# discord-ops-alert-py

./: .env.example  .gitignore  README.md  README.pt-BR.md  llm.txt  pyproject.toml  smoke_test.py
.github/workflows/: ci.yml  publish.yml
docs/superpowers/specs/: 2026-04-29-embeds-and-batching-design.md
src/discord_ops_alert/: __init__.py  batch.py  errors.py  http.py  logger.py  notifier.py  retry.py  types.py  validation.py
src/discord_ops_alert/transports/: bot.py  webhook.py
tests/: smoke_test.py  test_batch.py  test_notifier.py
