[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-ops-alert"
version = "0.1.0"
description = "Python SDK for sending Discord notifications — fire-and-forget, retry, webhook/bot mode"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["discord", "notifications", "alerts", "bot", "webhook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "python-dotenv>=1.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/LucaPinheiro/discord-ops-alert-py"
Repository = "https://github.com/LucaPinheiro/discord-ops-alert-py"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_ops_alert"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
